--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -45,7 +45,6 @@ Given the above, the goals of this project are:
 ## Data Description
 To address the goals of our project, we have combined the following data sets to form an array of predictors: 
 * The [World Sustainability Dataset](https://www.kaggle.com/datasets/truecue/worldsustainabilitydataset): A data set describing several measures of a nation's social, political, economic, and climate-related characterization. This data set was originally aggregated for the TrueCue Women+Data Hackathon, and was released as publicly available after the event. 
-* The [World Sustainability Dataset]
 * The [COVID vaccines](https://www.kaggle.com/datasets/gpreda/covid-world-vaccination-progress): A data set containing several vaccination measures, including cumulative vaccinations, the total number of vaccinated people and the number of vaccine doses administered per individual. The data set is updated daily based on Our World in Data GitHub repository for [covid-19](https://github.com/owid/covid-19-data) but for the purpose of this study, data includes vaccine rates up until March 17, 2022.  
 * [COVID cases](https://www.kaggle.com/datasets/josephassaker/covid19-global-dataset): A dataset containing daily reports of cumulative and new cases and deaths in each country. [Country populations in 2021](https://github.com/owid/covid-19-data/blob/master/scripts/input/un/population_latest.csv) are added to this data set to compute "per hundred" variables in addition to the existing cumulative cases and deaths. 
 
@@ -84,7 +83,7 @@ Before starting to do more involved EDA, we will preprocess our data to ensure w
 
 ## WSD preprocessing
 
-First, we will begin to process the World Sustainability Dataset. Let's read in the raw data and take a look at a few rows to get a sense of what it looks like. 
+First, we will begin to process the World Sustainability Dataset. 
 ```{r, eval = FALSE}
 data.raw <- read.csv('data/WorldSustainabilityDataset.csv', header = TRUE)
 ```
@@ -92,26 +91,18 @@ data.raw <- read.csv('data/WorldSustainabilityDataset.csv', header = TRUE)
 There are some missing elements labeled as empty instead of NA. Let's fix this before proceeding.
 ```{r, eval = FALSE}
 data.raw[data.raw == ""] <- NA
-```
 
-There are quite a few NAs. Let's get fields have at least a 90% complete rate. 
-```{r, eval = FALSE}
+#There are quite a few NAs. Let's get fields have at least a 90% complete rate. 
 data.90 <- data.raw[, apply(data.raw, 2, function(col)sum(is.na(col))/length(col)) < 0.10]
-```
-
-Let's make sure that removing the rows with missing values in these remaining fields will give us a sufficient number of countries to use. 
-
-```{r, eval = FALSE}
+#Let's make sure that removing the rows with missing values in these remaining fields will give us a sufficient number of countries to use. 
 data.processed <- na.omit(data.90)
 # How many countries?
 n.countries <- length(unique(data.processed$Country.Name))
-n.countries
 ```
-
 After cleaning, we are left with `n.countries` countries, which is a workable amount. 
 
-Ok good, now let's rename some of our variables to be easier to read and work with
-```{r, eval = FALSE}
+```{r}
+#Ok good, now let's rename some of our variables to be easier to read and work with
 names(data.processed)[4] <- "Electricity.Access"
 names(data.processed)[5] <- "Adj.SavingNetCO2Damage"
 names(data.processed)[6] <- "Adj.SavingNaturalResourceDepletion"
@@ -140,17 +131,13 @@ names(data.processed)[29] <- "RuralPopulation.Prop"
 names(data.processed)[30] <- "TotalNaturalResources.GDP"
 names(data.processed)[31] <- "UrbanPopulation.Prop"
 names(data.processed)[32] <- "WorldRegion"
-```
 
-Set string variables to Factor
-```{r, eval = FALSE}
+#Set string variables to Factor
 data.processed$RegimeType <- as.factor(data.processed$RegimeType)
 data.processed$WorldRegion <- as.factor(data.processed$WorldRegion)
 data.processed$WorldBankIncomeClass <- as.factor(data.processed$WorldBankIncomeClass)
-```
 
-Export the processed data
-```{r, eval=FALSE}
+# Export the processed data
 write.csv(data.processed, "data/WorldSustainabilityData_Processed.csv", row.names = FALSE)
 #rename and save for merge
 wsd <- data.processed
